A bit more code reorg and did considerable styling work on the order search page

--- a/public/styles/page/components.module.scss
+++ b/public/styles/page/components.module.scss
@@ -724,12 +724,11 @@
 	margin: {
 		top: 15px;
 		bottom: 15px;
-		left: auto;
-		right: auto;
 	}
 
-	width: 80%;
-	text-align: center;
+	display: flex;
+	align-items: center;
+	justify-content: center;
 }
 
 .upload-file-button {
