--- a/public/styles/page/paymentWidget.module.scss
+++ b/public/styles/page/paymentWidget.module.scss
@@ -14,7 +14,7 @@
 }
 
 .balance-remaining-tab {
-	@include common.fonts-define-font($family: Poppins, $size: common.$fonts-secondary);
+	@include common.fonts-define-font($family: var(--font-poppins), $size: common.$fonts-secondary);
 
 	border: {
 		width: 0.25px;
@@ -56,7 +56,7 @@
 }
 
 .payment-amount-section {
-	@include common.fonts-define-font($family: Poppins);
+	@include common.fonts-define-font($family: var(--font-poppins));
 
 	border: {
 		width: 1px;
@@ -85,7 +85,7 @@
 }
 
 .payment-accordion-section {
-	@include common.fonts-define-font($family: Poppins);
+	@include common.fonts-define-font($family: var(--font-poppins));
 
 	width: 100%;
 }
@@ -168,7 +168,7 @@
 }
 
 .payment-cc-existing-card {
-	@include common.fonts-define-font($family: Poppins, $size: common.$fonts-secondary);
+	@include common.fonts-define-font($family: var(--font-poppins), $size: common.$fonts-secondary);
 
 	margin: {
 		left: 10px;
